added the products json file and working on how to display the data in the homepage

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="/node_modules/animejs/lib/anime.min.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Document</title>
 </head>
@@ -14,10 +13,11 @@
 <body class="font-Mont">
 
     <header class="w-full pt-1 h-fit relative z-50">
-        <nav id="mobileNav" 
-        class="fixed z-[100] mt-[-10px] w-full hidden h-full bg-white/50 backdrop-filter backdrop-blur-lg">
+        <nav id="mobileNav"
+            class="fixed z-[100] mt-[-10px] w-full hidden h-full bg-white/50 backdrop-filter backdrop-blur-lg">
             <ul class="items-center flex-col justify-between flex gap-8 p-10 text-lg h-2/3">
-                <span id="closeNav" class="icon-[line-md--close] text-4xl self-end cursor-pointer hover:text-lBrown"></span>
+                <span id="closeNav"
+                    class="icon-[line-md--close] text-4xl self-end cursor-pointer hover:text-lBrown"></span>
                 <li><a class="navItem p-2" href="#">HOME</a></li>
                 <li><a class="navItem p-2" href="#">PRODUCTS</a></li>
                 <li><a class="navItem p-2" href="#">ABOUT</a></li>
@@ -34,7 +34,7 @@
                 <li><a class="navItem" href="#">ABOUT</a></li>
                 <li><a class="navItem" href="#">FAQ</a></li>
                 <li><a class="navItem" href="#">CONTACT</a></li>
-            </ul>        
+            </ul>
 
             <div class="flex justify-between gap-10 ">
                 <div class="relative flex items-center cursor-pointer">
@@ -59,7 +59,8 @@
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide1.jpg" alt="">
                     <div class="itemContent">
                         <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW COLLECTION</h3>
+                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW
+                            COLLECTION</h3>
                         <a class="carBtn bg-lBrown" href="">SHOP NOW</a>
                     </div>
                 </div>
@@ -67,7 +68,8 @@
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide2.jpg" alt="">
                     <div class="itemContent">
                         <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-cyan-600 text-4xl md:text-8xl font-bold italic tracking-widest">HOT PRODUCTS</h3>
+                        <h3 class="mb-2 text-cyan-600 text-4xl md:text-8xl font-bold italic tracking-widest">HOT
+                            PRODUCTS</h3>
                         <a class="carBtn bg-cyan-400" href="">SHOP NOW</a>
                     </div>
                 </div>
@@ -75,7 +77,8 @@
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide3.jpg" alt="">
                     <div class="itemContent">
                         <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-green-600 text-4xl md:text-8xl font-bold italic tracking-widest">AUTUMN COLLECTION</h3>
+                        <h3 class="mb-2 text-green-600 text-4xl md:text-8xl font-bold italic tracking-widest">AUTUMN
+                            COLLECTION</h3>
                         <a class="carBtn bg-green-400" href="">SHOP NOW</a>
                     </div>
                 </div>
@@ -86,13 +89,28 @@
         <!-- hot products -->
         <section class="flex flex-col justify-center m-auto mt-[-30px] items-center">
             <h2 class="productHeading">HOT PRODUCTS</h2>
-
             <!-- container -->
             <div class="flex flex-col md:flex-row justify-evenly items-center w-full my-10">
 
                 <!-- card -->
-                <div
-                    class="homeCard">
+                <div class="homeCard">
+                    <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
+                    <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <div class="flex justify-between w-full">
+                        <div class="flex justify-start items-center">
+                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
+                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
+                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
+                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
+                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
+                            <p class="text-slate-400 pl-2">(reviews)</p>
+                        </div>
+                        <p id="productPrice" class="text-lBrown pr-2 text-2xl">$99</p>
+                    </div>
+                </div>
+
+                <!-- card -->
+                <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
                     <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
@@ -109,26 +127,7 @@
                 </div>
 
                 <!-- card -->
-                <div
-                    class="homeCard">
-                    <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
-                    <div class="flex justify-between w-full">
-                        <div class="flex justify-start items-center">
-                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
-                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
-                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
-                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
-                            <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
-                            <p class="text-slate-400 pl-2">(reviews)</p>
-                        </div>
-                        <p class="text-lBrown pr-2 text-2xl">$99</p>
-                    </div>
-                </div>
-
-                <!-- card -->
-                <div
-                    class="homeCard">
+                <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
                     <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
@@ -145,6 +144,7 @@
                 </div>
 
             </div>
+
         </section>
 
         <!-- new products -->
@@ -155,8 +155,7 @@
             <div class="flex flex-col md:flex-row justify-evenly items-center w-full my-10">
 
                 <!-- card -->
-                <div
-                    class="homeCard">
+                <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
                     <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
@@ -173,8 +172,7 @@
                 </div>
 
                 <!-- card -->
-                <div
-                    class="homeCard">
+                <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
                     <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
@@ -191,8 +189,7 @@
                 </div>
 
                 <!-- card -->
-                <div
-                    class="homeCard">
+                <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
                     <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
@@ -254,66 +251,67 @@
         <!-- footer -->
         <footer class="flex flex-col justify-between items-center w-full border-2 border-lBrown m-auto pt-10 px-12">
 
-           <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12">
-             <!-- home -->
-             <div class="flex flex-col text-gray-400 gap-2 w-1/3">
-                <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">HOME</h2>
-                <p>Assembly Guides</p>
-                <p>Furniture Packages</p>
-                <p>Hot Products</p>
-                <p>New Designs</p>
-             </div>
+            <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12">
+                <!-- home -->
+                <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+                    <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">HOME</h2>
+                    <p>Assembly Guides</p>
+                    <p>Furniture Packages</p>
+                    <p>Hot Products</p>
+                    <p>New Designs</p>
+                </div>
 
-             <!-- about -->
-             <div class="flex flex-col text-gray-400 gap-2 w-1/3">
-                <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
-                    ABOUT</h2>
-                <p>Trade Program</p>
-                <p>Gift Cards</p>
-                <p>About us</p>
-                <p>Who Are We</p>
-            </div>
+                <!-- about -->
+                <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+                    <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
+                        ABOUT</h2>
+                    <p>Trade Program</p>
+                    <p>Gift Cards</p>
+                    <p>About us</p>
+                    <p>Who Are We</p>
+                </div>
 
-            <!-- socials -->
-            <div class="-order-1 lg:order-[0] flex flex-col gap-4 w-fit justify-center items-center">
-                <img class="w-2/3" src="assets/images/logo.png" alt="">
-                <div class="flex justify-center gap-6 pt-5 flex-wrap w-2/3 text-5xl">
-                    <span class="icon-[mdi--facebook]"></span>
-                    <span class="icon-[ri--instagram-fill]"></span>
-                    <span class="icon-[formkit--twitter]"></span>
-                    <span class="icon-[formkit--whatsapp]"></span>
+                <!-- socials -->
+                <div class="-order-1 lg:order-[0] flex flex-col gap-4 w-fit justify-center items-center">
+                    <img class="w-2/3" src="assets/images/logo.png" alt="">
+                    <div class="flex justify-center gap-6 pt-5 flex-wrap w-2/3 text-5xl">
+                        <span class="icon-[mdi--facebook]"></span>
+                        <span class="icon-[ri--instagram-fill]"></span>
+                        <span class="icon-[formkit--twitter]"></span>
+                        <span class="icon-[formkit--whatsapp]"></span>
+                    </div>
+                </div>
+
+                <!-- help -->
+                <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+                    <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
+                        HELP</h2>
+                    <p>Contact</p>
+                    <p>Orders</p>
+                    <p>Shipping & Delivery</p>
+                    <p>Refund</p>
+                </div>
+
+                <!-- FAQ -->
+                <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+                    <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
+                        FAQ</h2>
+                    <p>Most Asked Questions</p>
+                    <p>How We Take Orders</p>
+                    <p>Delivery Policy</p>
+                    <p>Trust</p>
                 </div>
             </div>
 
-            <!-- help -->
-            <div class="flex flex-col text-gray-400 gap-2 w-1/3">
-                <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
-                    HELP</h2>
-                <p>Contact</p>
-                <p>Orders</p>
-                <p>Shipping & Delivery</p>
-                <p>Refund</p>
-            </div>
-
-             <!-- FAQ -->
-             <div class="flex flex-col text-gray-400 gap-2 w-1/3">
-                <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
-                    FAQ</h2>
-                <p>Most Asked Questions</p>
-                <p>How We Take Orders</p>
-                <p>Delivery Policy</p>
-                <p>Trust</p>
-            </div>
-           </div>
-
-           <!-- copyright -->
-           <h2 class="flex justify-center py-6 text-2xl text-center font-bold">© 2024 SOFALO. ALL RIGHTS RESERVED.</h2>
+            <!-- copyright -->
+            <h2 class="flex justify-center py-6 text-2xl text-center font-bold">© 2024 SOFALO. ALL RIGHTS RESERVED.</h2>
 
         </footer>
     </main>
 
+    <script src="assets/js/home/handler.js"></script>
     <script src="assets/js/home/carousel.js"></script>
-     <script src="assets/js/navbar.js"></script>
+    <script src="assets/js/navbar.js"></script>
 </body>
 
 </html>
