add a filter function that filter products by category and display them

--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -58,11 +58,11 @@
                 </div>
                 <!-- Filter Options-->
                 <div id="filterOptions" style="display: none;" class="absolute mt-10 bg-white shadow-md rounded-lg w-[150px]">
-                    <p class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Beds</p>
-                    <p class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Decoration</p>
-                    <p class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Kitchen</p>
-                    <p class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Storage</p>
-                    <p class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Tables</p>
+                    <p id="Beds" class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Beds</p>
+                    <p id="Decoration" class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Decoration</p>
+                    <p id="Kitchen" class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Kitchen</p>
+                    <p id="Storage" class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Storage</p>
+                    <p id="Tables" class="filter-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Tables</p>
                 </div>
             </div>
         </div>
