--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
                 <!-- card -->
                 <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
@@ -122,14 +122,14 @@
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <p class="text-slate-400 pl-2">(reviews)</p>
                         </div>
-                        <p class="text-lBrown pr-2 text-2xl">$99</p>
+                        <p id="productPrice" class="text-lBrown pr-2 text-2xl">$99</p>
                     </div>
                 </div>
 
                 <!-- card -->
                 <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
@@ -139,7 +139,7 @@
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <p class="text-slate-400 pl-2">(reviews)</p>
                         </div>
-                        <p class="text-lBrown pr-2 text-2xl">$99</p>
+                        <p id="productPrice" class="text-lBrown pr-2 text-2xl">$99</p>
                     </div>
                 </div>
 
@@ -157,7 +157,7 @@
                 <!-- card -->
                 <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
@@ -167,14 +167,14 @@
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <p class="text-slate-400 pl-2">(reviews)</p>
                         </div>
-                        <p class="text-lBrown pr-2 text-2xl">$99</p>
+                        <p id="productPrice" class="text-lBrown pr-2 text-2xl">$99</p>
                     </div>
                 </div>
 
                 <!-- card -->
                 <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
@@ -184,14 +184,14 @@
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <p class="text-slate-400 pl-2">(reviews)</p>
                         </div>
-                        <p class="text-lBrown pr-2 text-2xl">$99</p>
+                        <p id="productPrice" class="text-lBrown pr-2 text-2xl">$99</p>
                     </div>
                 </div>
 
                 <!-- card -->
                 <div class="homeCard">
                     <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
@@ -201,7 +201,7 @@
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <p class="text-slate-400 pl-2">(reviews)</p>
                         </div>
-                        <p class="text-lBrown pr-2 text-2xl">$99</p>
+                        <p id="productPrice" class="text-lBrown pr-2 text-2xl">$99</p>
                     </div>
                 </div>
 
