some quality of life changes to the footer

--- a/public/index.html
+++ b/public/index.html
@@ -249,26 +249,26 @@
         </section>
 
         <!-- footer -->
-        <footer class="flex flex-col justify-between items-center w-full border-2 border-lBrown m-auto pt-10 px-12">
+        <footer class="flex flex-col justify-between items-center w-full border-t-2 border-lBrown m-auto pt-10 px-12">
 
             <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12">
                 <!-- home -->
                 <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                     <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">HOME</h2>
-                    <p>Assembly Guides</p>
-                    <p>Furniture Packages</p>
-                    <p>Hot Products</p>
-                    <p>New Designs</p>
+                    <p class="footerHover">Assembly Guides</p>
+                    <p class="footerHover">Furniture Packages</p>
+                    <p class="footerHover">Hot Products</p>
+                    <p class="footerHover">New Designs</p>
                 </div>
 
                 <!-- about -->
                 <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                     <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
                         ABOUT</h2>
-                    <p>Trade Program</p>
-                    <p>Gift Cards</p>
-                    <p>About us</p>
-                    <p>Who Are We</p>
+                    <p class="footerHover">Trade Program</p>
+                    <p class="footerHover">Gift Cards</p>
+                    <p class="footerHover">About us</p>
+                    <p class="footerHover">Who Are We</p>
                 </div>
 
                 <!-- socials -->
@@ -286,20 +286,20 @@
                 <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                     <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
                         HELP</h2>
-                    <p>Contact</p>
-                    <p>Orders</p>
-                    <p>Shipping & Delivery</p>
-                    <p>Refund</p>
+                    <p class="footerHover">Contact</p>
+                    <p class="footerHover">Orders</p>
+                    <p class="footerHover">Shipping & Delivery</p>
+                    <p class="footerHover">Refund</p>
                 </div>
 
                 <!-- FAQ -->
                 <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                     <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
                         FAQ</h2>
-                    <p>Most Asked Questions</p>
-                    <p>How We Take Orders</p>
-                    <p>Delivery Policy</p>
-                    <p>Trust</p>
+                    <p class="footerHover">Most Asked Questions</p>
+                    <p class="footerHover">How We Take Orders</p>
+                    <p class="footerHover">Delivery Policy</p>
+                    <p class="footerHover">Trust</p>
                 </div>
             </div>
 
