filled out the readme file

--- a/public/index.html
+++ b/public/index.html
@@ -255,30 +255,30 @@
                 <!-- home -->
                 <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                     <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">HOME</h2>
-                    <p class="footerHover">Assembly Guides</p>
-                    <p class="footerHover">Furniture Packages</p>
-                    <p class="footerHover">Hot Products</p>
-                    <p class="footerHover">New Designs</p>
+                    <a class="footerHover">Assembly Guides</a>
+                    <a class="footerHover">Furniture Packages</a>
+                    <a class="footerHover">Hot Products</a>
+                    <a class="footerHover">New Designs</a>
                 </div>
 
                 <!-- about -->
                 <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                     <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
                         ABOUT</h2>
-                    <p class="footerHover">Trade Program</p>
-                    <p class="footerHover">Gift Cards</p>
-                    <p class="footerHover">About us</p>
-                    <p class="footerHover">Who Are We</p>
+                    <a class="footerHover">Trade Program</a>
+                    <a class="footerHover">Gift Cards</a>
+                    <a class="footerHover">About us</a>
+                    <a class="footerHover">Who Are We</a>
                 </div>
 
                 <!-- socials -->
                 <div class="-order-1 lg:order-[0] flex flex-col gap-4 w-fit justify-center items-center">
                     <img class="w-2/3" src="assets/images/logo.png" alt="">
                     <div class="flex justify-center gap-6 pt-5 flex-wrap w-2/3 text-5xl">
-                        <span class="icon-[mdi--facebook]"></span>
-                        <span class="icon-[ri--instagram-fill]"></span>
-                        <span class="icon-[formkit--twitter]"></span>
-                        <span class="icon-[formkit--whatsapp]"></span>
+                        <span class="icon-[mdi--facebook] footerHover"></span>
+                        <span class="icon-[ri--instagram-fill] footerHover"></span>
+                        <span class="icon-[formkit--twitter] footerHover"></span>
+                        <span class="icon-[formkit--whatsapp] footerHover"></span>
                     </div>
                 </div>
 
@@ -286,20 +286,20 @@
                 <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                     <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
                         HELP</h2>
-                    <p class="footerHover">Contact</p>
-                    <p class="footerHover">Orders</p>
-                    <p class="footerHover">Shipping & Delivery</p>
-                    <p class="footerHover">Refund</p>
+                    <a class="footerHover">Contact</a>
+                    <a class="footerHover">Orders</a>
+                    <a class="footerHover">Shipping & Delivery</a>
+                    <a class="footerHover">Refund</a>
                 </div>
 
                 <!-- FAQ -->
                 <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                     <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
                         FAQ</h2>
-                    <p class="footerHover">Most Asked Questions</p>
-                    <p class="footerHover">How We Take Orders</p>
-                    <p class="footerHover">Delivery Policy</p>
-                    <p class="footerHover">Trust</p>
+                    <a class="footerHover">Most Asked Questions</a>
+                    <a class="footerHover">How We Take Orders</a>
+                    <a class="footerHover">Delivery Policy</a>
+                    <a class="footerHover">Trust</ش>
                 </div>
             </div>
 
