add a reviews section

--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -80,6 +80,6 @@
     </div>
 
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/AllProducts.js"></script>
 </body>
 </html>
