--- a/public/ProductDetails.html
+++ b/public/ProductDetails.html
@@ -31,6 +31,54 @@
     <div id="ProductDetails" class="flex flex-col md:flex-row p-4 mt-20">
 
     </div>
+    <div>
+        <div class="title flex flex-col align-center pt-20">
+            <h1 class="self-center text-6xl">Reviews</h1>
+            <p class="text-SoftGray self-center text-xl">reviews about this product</p>
+        </div>
+
+        <div class="reviews flex flex-col md:flex-row items-center md:justify-around pt-10 pb-10 space-y-8 md:space-y-0">
+            <div class="review1 bg-whiteGrey flex flex-col items-center p-4 w-60 md:w-auto max-w-xs">
+                <img class="w-60 h-60 md:w-72 md:h-72 p-2" src="./assets/images/reviews/Alex-Foord-e1644436249973.jpg" alt="">
+                <i class="text-lg md:text-2xl">Mohammed</i>
+                <div class="flex">
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                </div>
+                <p class="text-SoftGray text-sm md:text-base pb-2">Great Product</p>
+            </div>
+        
+            <div class="review2 bg-whiteGrey flex flex-col items-center p-4 w-60 md:w-auto max-w-xs">
+                <img class="w-60 h-60 md:w-72 md:h-72 p-2" src="./assets/images/reviews/business-woman-manager-or-human.jpg" alt="">
+                <i class="text-lg md:text-2xl">Asmae</i>
+                <div class="flex">
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                </div>
+                <p class="text-SoftGray text-sm md:text-base pb-2">Nice Product</p>
+            </div>
+
+            <div class="review3 bg-whiteGrey flex flex-col items-center p-4 w-60 md:w-auto max-w-xs">
+                <img class="w-60 h-60 md:w-72 md:h-72 p-2" src="./assets/images/reviews/amit.jpg" alt="">
+                <i class="text-lg md:text-2xl">Ahmed</i>
+                <div class="flex">
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                    <span class="icon-[ri--star-fill] text-lBrown text-xl md:text-2xl"></span>
+                </div>
+                <p class="text-SoftGray text-sm md:text-base pb-2">Good Product</p>
+            </div>
+        </div>
+    </div>
+   
     
 <script type="module" src="./assets/js/ProductDetails.js"></script>
 </body>
