--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             </ul>
 
             <div class="flex justify-between gap-10 ">
-                <div class="relative flex items-center cursor-pointer">
+                <div id="openCart" class="relative flex items-center cursor-pointer">
                     <span
                         class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
                     <div
@@ -46,6 +46,47 @@
                 </div>
                 <span id="openNav"
                     class="icon-[iconamoon--menu-burger-horizontal] cursor-pointer text-black text-3xl lg:hidden hover:text-lBrown active:text-dBrown"></span>
+            </div>
+        </nav>
+
+        <nav id="cartMain" class="fixed top-0 flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
+            <div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col bg-white h-full">
+                <!-- heading -->
+                <div class="drop-shadow-lg flex justify-between p-2 items-center flex-row h-[5%] bg-lBrown w-full">
+                    <p class=" ont-medium text-2xl">0 ITEMS</p>
+                    <span id="closeCart" class="icon-[line-md--close] text-4xl cursor-pointer text-black"></span>
+                </div>
+                <!-- container -->
+                <div class="h-4/5 w-full bg-gray-200 p-2 gap-2 flex flex-col overflow-y-auto">
+
+                    <!-- card -->
+                    <div class="bg-white w-full h-1/5 flex flex-row">
+                        <img class="w-1/3 objec h-full bg-white" src="assets/images/Products/Beds/bed1/1.png" alt="">
+                        <div class="w-full h-full flex flex-col justify-start p-2">
+                            <div class="flex justify-between">
+                                <p class="text-2xl">TITLE</p>
+                                <span
+                                    class="icon-[iconamoon--trash-light] text-2xl cursor-pointer hover:bg-red-500 transition-all"></span>
+                            </div>
+                            <p class="text-gray-500 h-full">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <div class="flex justify-between flex-wrap">
+                                <p class="font-bold">QTY: 1</p>
+                                <p class="text-lBrown font-medium">250$</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- info -->
+                <div class="flex flex-col p-2 h-[15%] justify-center">
+                    <p class="text-2xl font-bold">TOTAL: 555$</p>
+                    <p class="text-gray-400">SUMMARY: 400$</p>
+                    <p class="text-gray-400">TAX: 400$</p>
+                    <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown" href="#">CHECKOUT</a>
+                </div>
+        
             </div>
         </nav>
     </header>
