--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
             </ul>
 
             <div class="flex justify-between gap-10 ">
-                <div id="openCart" class="relative flex items-center cursor-pointer">
-                    <span
+                <div  class="relative flex items-center cursor-pointer">
+                    <span id="openCart"
                         class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
                     <div
                         class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">
@@ -84,7 +84,7 @@
                     <p class="text-2xl font-bold">TOTAL: 555$</p>
                     <p class="text-gray-400">SUMMARY: 400$</p>
                     <p class="text-gray-400">TAX: 400$</p>
-                    <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown" href="#">CHECKOUT</a>
+                    <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all" href="#">CHECKOUT</a>
                 </div>
         
             </div>
