--- a/public/ProductDetails.html
+++ b/public/ProductDetails.html
@@ -30,8 +30,54 @@
     
     <div id="ProductDetails" class="flex flex-col md:flex-row p-4 mt-20">
 
+        <div class="flex flex-col justify-end items-center md:items-start md:w-1/2 md:mr-8">
+            <div class="flex flex-col items-center self-end">
+                <div class="mainImage bg-whiteGrey mb-4 p-2">
+                    <img id="mainImagee" class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg h-auto object-cover" alt="main image">
+                </div>
+
+                <div class="variableImages flex gap-4 justify-center mt-4">
+                    <img id="var1" class="w-16 h-16 object-cover cursor-pointer" src="" alt="variable Image">
+                    <img id="var2" class="w-16 h-16 object-cover cursor-pointer" src="" alt="variable Image">
+                    <img id="var3" class="w-16 h-16 object-cover cursor-pointer" src="" alt="variable Image">
+                </div>
+            </div>
+        </div>
+
+        <div class="md:w-1/2 md:pl-8 flex flex-col justify-start mt-4 md:mt-0">
+            <h2 id="titleProduct" class="text-4xl font-semibold mb-2"></h2>
+            <div class="flex items-center gap-2 text-lg mb-4 pb-8">
+                <span class="line-through text-SoftGray text-2xl">$300</span>
+                <span id="priceProduct" class="text-lBrown text-2xl"></span>
+            </div>
+
+            <hr class="w-[80%] h-[1px] bg-SoftGray border-0">
+
+            <p id="descriptionProduct" class="text-SoftGray mb-6 w-[80%] pt-8"></p>
+
+            <div class="flex items-center gap-4 mb-4 pb-8">
+                <div class="flex items-center border border-SoftGray">
+                    <p id="Qnt" class="w-10 text-center pt-3 border border-SoftGray text-SoftGray h-[51px] focus:outline-none"></p>
+                    <div class="flex flex-col">
+                        <button id="plus" class="px-2 border border-SoftGray h-[25.5px] text-SoftGray">+</button>
+                        <button id="minus" class="px-2 border border-SoftGray h-[25.5px] text-SoftGray">-</button>
+                    </div>
+                </div>
+                <button class="bg-lBrown w-[60%] text-white px-6 py-2 font-semibold h-[51px]">ADD TO CART</button>
+            </div>
+
+            <hr class="w-[80%] h-[1px] bg-SoftGray border-0">
+
+            <div class="text-sm text-SoftGray pt-8">
+                <div class="flex gap-4"><strong class="text-gray">SKU:</strong><p id="SKU"></p></div> 
+                <div class="flex gap-4"><strong class="text-gray">Categories:</strong><p id="category"></p></div>
+                <div class="flex gap-4"><strong class="text-gray">Stock:</strong><p id="stock"></p></div>
+            </div>
+        </div>
+
     </div>
     <div>
+        
         <div class="title flex flex-col align-center pt-20">
             <h1 class="self-center text-6xl">Reviews</h1>
             <p class="text-SoftGray self-center text-xl">reviews about this product</p>
