--- a/public/about.html
+++ b/public/about.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <script src="/node_modules/animejs/lib/anime.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Document</title>
 </head>
+
 <header class="w-full pt-1 h-fit relative z-50">
-  <nav id="mobileNav"
+    <nav id="mobileNav"
     class="fixed z-[100] mt-[-10px] w-full hidden h-full bg-white/50 backdrop-filter backdrop-blur-lg">
     <ul class="items-center flex-col justify-between flex gap-8 p-10 text-lg h-2/3">
       <span id="closeNav" class="icon-[line-md--close] text-4xl self-end cursor-pointer hover:text-lBrown"></span>
@@ -23,9 +25,9 @@
       <li><a class="navItem p-2" href="#">FAQ</a></li>
       <li><a class="navItem p-2" href="#">CONTACT</a></li>
     </ul>
-  </nav>
+    </nav>
 
-  <nav class="flex flex-row items-center justify-between px-2 py-2 pt-2 lg:px-12">
+    <nav class="flex flex-row items-center justify-between px-2 py-2 pt-2 lg:px-12">
     <img class="pl-2 w-36" src="assets/images/logo.png" alt="COMPANY LOGO">
     <ul class="items-center justify-between hidden gap-8 pr-20 text-lg lg:flex">
       <li><a class="navItem" href="#">HOME</a></li>
@@ -45,9 +47,9 @@
       <span id="openNav"
         class="icon-[iconamoon--menu-burger-horizontal] cursor-pointer text-black text-3xl lg:hidden hover:text-lBrown active:text-dBrown"></span>
     </div>
-  </nav>
+    </nav>
 
-  <nav id="cartMain" class="fixed top-0 hidden flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
+    <nav id="cartMain" class="fixed top-0 hidden flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
     <div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col bg-white h-full">
       <!-- heading -->
       <div class="drop-shadow-lg flex justify-between p-2 items-center flex-row h-[5%] bg-lBrown w-full">
@@ -87,7 +89,7 @@
       </div>
 
     </div>
-  </nav>
+    </nav>
 </header>
 
 <body class="bg-white text-gray-800 font-Mont">
@@ -98,7 +100,7 @@
       <img src="./assets/images/aboutimages/image1ABOUT.jpg" alt="Our Company Image"
         class="w-full md:w-1/2 h-64 object-cover">
       <div class="md:w-1/2 space-y-2">
-        <p class="text-sm font-semibold text-yellow-600">W3 DESIGN FURNITURE</p>
+        <p class="text-sm font-semibold text-yellow-600">WE DESIGN FURNITURE</p>
         <h2 class="text-2xl font-bold  font-Mont text-gray-900">OUR COMPANY</h2>
         <p class="font-Mont ">AT SOFALO, we believe that every space has the potential to inspire. Our collection of
           furniture and decor is thoughtfully curated to offer quality, style, and affordability, allowing you to create
@@ -154,7 +156,7 @@
   <!-- footer -->
   <footer class="flex flex-col justify-between items-center w-full border-t-2 border-lBrown m-auto pt-10 px-12">
 
-    <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12">
+    <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12 w-full">
       <!-- home -->
       <div class="flex flex-col text-gray-400 gap-2 w-1/3">
         <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">HOME</h2>
@@ -211,8 +213,8 @@
 
   </footer>
 
-  <script src="./assets/about.js/script.js"></script>
-
+  <script src="assets/js/navbar.js"></script>
+  <script src="./assets/js/about.js/script.js"></script>
 
 </body>
 
