--- a/public/ProductDetails.html
+++ b/public/ProductDetails.html
@@ -77,7 +77,7 @@
 
     </div>
     <div>
-        
+
         <div class="title flex flex-col align-center pt-20">
             <h1 class="self-center text-6xl">Reviews</h1>
             <p class="text-SoftGray self-center text-xl">reviews about this product</p>
@@ -125,6 +125,66 @@
         </div>
     </div>
    
+
+     <!-- footer -->
+  <footer class="flex flex-col justify-between items-center w-full border-t-2 border-lBrown m-auto pt-10 px-12">
+
+    <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12 w-full">
+      <!-- home -->
+      <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+        <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">HOME</h2>
+        <a class="footerHover">Assembly Guides</a>
+        <a class="footerHover">Furniture Packages</a>
+        <a class="footerHover">Hot Products</a>
+        <a class="footerHover">New Designs</a>
+      </div>
+
+      <!-- about -->
+      <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+        <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
+          ABOUT</h2>
+        <a class="footerHover">Trade Program</a>
+        <a class="footerHover">Gift Cards</a>
+        <a class="footerHover">About us</a>
+        <a class="footerHover">Who Are We</a>
+      </div>
+
+      <!-- socials -->
+      <div class="-order-1 lg:order-[0] flex flex-col gap-4 w-fit justify-center items-center">
+        <img class="w-2/3" src="assets/images/logo.png" alt="">
+        <div class="flex justify-center gap-6 pt-5 flex-wrap w-2/3 text-5xl">
+          <span class="icon-[mdi--facebook] footerHover"></span>
+          <span class="icon-[ri--instagram-fill] footerHover"></span>
+          <span class="icon-[formkit--twitter] footerHover"></span>
+          <span class="icon-[formkit--whatsapp] footerHover"></span>
+        </div>
+      </div>
+
+      <!-- help -->
+      <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+        <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
+          HELP</h2>
+        <a class="footerHover">Contact</a>
+        <a class="footerHover">Orders</a>
+        <a class="footerHover">Shipping & Delivery</a>
+        <a class="footerHover">Refund</a>
+      </div>
+
+      <!-- FAQ -->
+      <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+        <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
+          FAQ</h2>
+        <a class="footerHover">Most Asked Questions</a>
+        <a class="footerHover">How We Take Orders</a>
+        <a class="footerHover">Delivery Policy</a>
+        <a class="footerHover">Trust</ش>
+      </div>
+    </div>
+
+    <!-- copyright -->
+    <h2 class="flex justify-center py-6 text-2xl text-center font-bold">© 2024 SOFALO. ALL RIGHTS RESERVED.</h2>
+
+  </footer>
     
 <script type="module" src="./assets/js/ProductDetails.js"></script>
 </body>
