fix the tailwind cdn and images path after marging

--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="/node_modules/animejs/lib/anime.min.js"></script>
+
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Products Page</title>
 </head>
 <body>
