--- a/public/about.html
+++ b/public/about.html
@@ -6,93 +6,94 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
   <script src="/node_modules/animejs/lib/anime.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
 
-  <script src="https://cdn.tailwindcss.com"></script>
   <title>Document</title>
 </head>
 
-<header class="w-full pt-1 h-fit relative z-50">
+<body class="bg-white text-gray-800 font-Mont">
+  
+  <header class="w-full pt-1 h-fit relative z-50">
     <nav id="mobileNav"
-    class="fixed z-[100] mt-[-10px] w-full hidden h-full bg-white/50 backdrop-filter backdrop-blur-lg">
-    <ul class="items-center flex-col justify-between flex gap-8 p-10 text-lg h-2/3">
-      <span id="closeNav" class="icon-[line-md--close] text-4xl self-end cursor-pointer hover:text-lBrown"></span>
-      <li><a class="navItem p-2" href="#">HOME</a></li>
-      <li><a class="navItem p-2" href="#">PRODUCTS</a></li>
-      <li><a class="navItem p-2" href="#">ABOUT</a></li>
-      <li><a class="navItem p-2" href="#">FAQ</a></li>
-      <li><a class="navItem p-2" href="#">CONTACT</a></li>
-    </ul>
+      class="fixed z-[100] mt-[-10px] w-full hidden h-full bg-white/50 backdrop-filter backdrop-blur-lg">
+      <ul class="items-center flex-col justify-between flex gap-8 p-10 text-lg h-2/3">
+        <span id="closeNav" class="icon-[line-md--close] text-4xl self-end cursor-pointer hover:text-lBrown"></span>
+        <li><a class="navItem p-2" href="#">HOME</a></li>
+        <li><a class="navItem p-2" href="#">PRODUCTS</a></li>
+        <li><a class="navItem p-2" href="#">ABOUT</a></li>
+        <li><a class="navItem p-2" href="#">FAQ</a></li>
+        <li><a class="navItem p-2" href="#">CONTACT</a></li>
+      </ul>
     </nav>
 
     <nav class="flex flex-row items-center justify-between px-2 py-2 pt-2 lg:px-12">
-    <img class="pl-2 w-36" src="assets/images/logo.png" alt="COMPANY LOGO">
-    <ul class="items-center justify-between hidden gap-8 pr-20 text-lg lg:flex">
-      <li><a class="navItem" href="#">HOME</a></li>
-      <li><a class="navItem" href="#">PRODUCTS</a></li>
-      <li><a class="navItem" href="#">ABOUT</a></li>
-      <li><a class="navItem" href="#">FAQ</a></li>
-      <li><a class="navItem" href="#">CONTACT</a></li>
-    </ul>
+      <img class="pl-2 w-36" src="assets/images/logo.png" alt="COMPANY LOGO">
+      <ul class="items-center justify-between hidden gap-8 pr-20 text-lg lg:flex">
+        <li><a class="navItem" href="#">HOME</a></li>
+        <li><a class="navItem" href="#">PRODUCTS</a></li>
+        <li><a class="navItem" href="#">ABOUT</a></li>
+        <li><a class="navItem" href="#">FAQ</a></li>
+        <li><a class="navItem" href="#">CONTACT</a></li>
+      </ul>
 
-    <div class="flex justify-between gap-10 ">
-      <div class="relative flex items-center cursor-pointer">
-        <span id="openCart"
-          class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
-        <div class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">
-          0</div>
+      <div class="flex justify-between gap-10 ">
+        <div class="relative flex items-center cursor-pointer">
+          <span id="openCart"
+            class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
+          <div class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">
+            0</div>
+        </div>
+        <span id="openNav"
+          class="icon-[iconamoon--menu-burger-horizontal] cursor-pointer text-black text-3xl lg:hidden hover:text-lBrown active:text-dBrown"></span>
       </div>
-      <span id="openNav"
-        class="icon-[iconamoon--menu-burger-horizontal] cursor-pointer text-black text-3xl lg:hidden hover:text-lBrown active:text-dBrown"></span>
-    </div>
     </nav>
 
-    <nav id="cartMain" class="fixed top-0 hidden flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
-    <div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col bg-white h-full">
-      <!-- heading -->
-      <div class="drop-shadow-lg flex justify-between p-2 items-center flex-row h-[5%] bg-lBrown w-full">
-        <p class=" ont-medium text-2xl">0 ITEMS</p>
-        <span id="closeCart" class="icon-[line-md--close] text-4xl cursor-pointer text-black"></span>
-      </div>
-      <!-- container -->
-      <div class="h-4/5 w-full bg-gray-200 p-2 gap-2 flex flex-col overflow-y-auto">
+    <nav id="cartMain"
+      class="fixed top-0 hidden flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
+      <div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col bg-white h-full">
+        <!-- heading -->
+        <div class="drop-shadow-lg flex justify-between p-2 items-center flex-row h-[5%] bg-lBrown w-full">
+          <p class=" ont-medium text-2xl">0 ITEMS</p>
+          <span id="closeCart" class="icon-[line-md--close] text-4xl cursor-pointer text-black"></span>
+        </div>
+        <!-- container -->
+        <div class="h-4/5 w-full bg-gray-200 p-2 gap-2 flex flex-col overflow-y-auto">
 
-        <!-- card -->
-        <div class="bg-white w-full h-1/5 flex flex-row">
-          <img class="w-1/3 objec h-full bg-white" src="assets/images/Products/Beds/bed1/1.png" alt="">
-          <div class="w-full h-full flex flex-col justify-start p-2">
-            <div class="flex justify-between">
-              <p class="text-2xl">TITLE</p>
-              <span
-                class="icon-[iconamoon--trash-light] text-2xl cursor-pointer hover:bg-red-500 transition-all"></span>
-            </div>
-            <p class="text-gray-500 h-full">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <div class="flex justify-between flex-wrap">
-              <p class="font-bold">QTY: 1</p>
-              <p class="text-lBrown font-medium">250$</p>
+          <!-- card -->
+          <div class="bg-white w-full h-1/5 flex flex-row">
+            <img class="w-1/3 objec h-full bg-white" src="assets/images/Products/Beds/bed1/1.png" alt="">
+            <div class="w-full h-full flex flex-col justify-start p-2">
+              <div class="flex justify-between">
+                <p class="text-2xl">TITLE</p>
+                <span
+                  class="icon-[iconamoon--trash-light] text-2xl cursor-pointer hover:bg-red-500 transition-all"></span>
+              </div>
+              <p class="text-gray-500 h-full">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+              <div class="flex justify-between flex-wrap">
+                <p class="font-bold">QTY: 1</p>
+                <p class="text-lBrown font-medium">250$</p>
+              </div>
             </div>
           </div>
+
+        </div>
+
+        <!-- info -->
+        <div class="flex flex-col p-2 h-[15%] justify-center">
+          <p class="text-2xl font-bold">TOTAL: 555$</p>
+          <p class="text-gray-400">SUMMARY: 400$</p>
+          <p class="text-gray-400">TAX: 400$</p>
+          <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all"
+            href="#">CHECKOUT</a>
         </div>
 
       </div>
-
-      <!-- info -->
-      <div class="flex flex-col p-2 h-[15%] justify-center">
-        <p class="text-2xl font-bold">TOTAL: 555$</p>
-        <p class="text-gray-400">SUMMARY: 400$</p>
-        <p class="text-gray-400">TAX: 400$</p>
-        <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all"
-          href="#">CHECKOUT</a>
-      </div>
-
-    </div>
     </nav>
-</header>
-
-<body class="bg-white text-gray-800 font-Mont">
+  </header>
 
   <main class="px-8 py-12 space-y-12 max-w-6xl mx-auto">
     <!-- Our Company Section -->
