--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             </ul>
 
             <div class="flex justify-between gap-10 ">
-                <div  class="relative flex items-center cursor-pointer">
+                <div class="relative flex items-center cursor-pointer">
                     <span id="openCart"
                         class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
                     <div
@@ -49,7 +49,8 @@
             </div>
         </nav>
 
-        <nav id="cartMain" class="fixed top-0 flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
+        <nav id="cartMain"
+            class="fixed hidden top-0 flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
             <div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col bg-white h-full">
                 <!-- heading -->
                 <div class="drop-shadow-lg flex justify-between p-2 items-center flex-row h-[5%] bg-lBrown w-full">
@@ -84,9 +85,10 @@
                     <p class="text-2xl font-bold">TOTAL: 555$</p>
                     <p class="text-gray-400">SUMMARY: 400$</p>
                     <p class="text-gray-400">TAX: 400$</p>
-                    <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all" href="#">CHECKOUT</a>
+                    <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all"
+                        href="#">CHECKOUT</a>
                 </div>
-        
+
             </div>
         </nav>
     </header>
